generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
  runtime  = "bun"
}

datasource db {
  provider = "postgresql"
}

model User {
  id            String       @id @default(uuid())
  name          String
  email         String       @unique
  emailVerified Boolean      @default(false)
  image         String?
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt
  sessions      Session[]
  xpPoints      Int          @default(0)
  balance       Float        @default(0)
  createdCauses Cause[]      @relation("CreatedCauses")
  donations     Donation[]
  badges        UserBadge[]
  payments      Payment[]
  withdrawals   Withdrawal[]
  passwordHash  String?
  isAdmin       Boolean
  isAnonymous   Boolean      @default(false)
  accounts      Account[]
  collectionPointSuggestions CollectionPointSuggestion[]

  @@map("user")
}

model Session {
  id        String   @id @default(uuid())
  expiresAt DateTime
  token     String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("session")
}

model Verification {
  id         String   @id @default(uuid())
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@map("verification")
}

model Category {
  id          String   @id @default(uuid())
  name        String   @unique
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  causes      Cause[]

  @@map("category")
}

model Cause {
  id            String       @id @default(uuid())
  title         String
  description   String
  goalAmount    Float
  raised        Float        @default(0)
  status        String       @default("ACTIVE")
  isVerified    Boolean      @default(false)
  isFeatured    Boolean      @default(false)
  authorId      String
  author        User         @relation("CreatedCauses", fields: [authorId], references: [id])
  categoryId    String?
  category      Category?    @relation(fields: [categoryId], references: [id])
  donations     Donation[]
  payments      Payment[]
  withdrawals   Withdrawal[]
  images        CauseImage[]
  documents     CauseDocument[]
  balance       Float        @default(0)
  createdAt     DateTime     @default(now())
  isGoalReached Boolean      @default(false)
  updatedAt     DateTime     @updatedAt

  // Localização
  locationName  String?
  address       String?
  city          String?
  state         String?
  country       String?
  latitude      Float?
  longitude     Float?

  @@index([city])
  @@index([status])
  @@index([status, city])
}

model CauseImage {
  id        String   @id @default(uuid())
  causeId   String
  cause     Cause    @relation(fields: [causeId], references: [id], onDelete: Cascade)
  key       String
  position  Int
  createdAt DateTime @default(now())

  @@index([causeId])
  @@unique([causeId, position])
  @@map("cause_image")
}

enum PaymentStatus {
  PENDING
  APPROVED
  REJECTED
  CANCELLED
}

model Payment {
  id           String        @id @default(uuid())
  mpPaymentId  String?       @unique
  status       PaymentStatus @default(PENDING)
  amount       Float
  message      String?
  payerEmail   String
  qrCode       String?
  qrCodeBase64 String?
  userId       String
  user         User          @relation(fields: [userId], references: [id])
  causeId      String
  cause        Cause         @relation(fields: [causeId], references: [id])
  donationId   String?       @unique
  donation     Donation?     @relation(fields: [donationId], references: [id])
  emailSent    Boolean       @default(false)
  isAnonymous  Boolean       @default(false)
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt

  @@index([userId])
  @@index([causeId])
  @@map("payment")
}

enum BadgeKey {
  FIRST_DONATION
  DONOR_5
  DONOR_10
  DONOR_20
  TOTAL_500
  TOTAL_1000
}

model Donation {
  id        String   @id @default(uuid())
  amount    Float
  message   String?
  xpEarned  Int      @default(0)
  userId      String
  user        User     @relation(fields: [userId], references: [id])
  causeId     String
  cause       Cause    @relation(fields: [causeId], references: [id])
  isAnonymous Boolean  @default(false)
  payment     Payment?
  createdAt   DateTime @default(now())
}

model UserBadge {
  id       String   @id @default(uuid())
  userId   String
  badgeKey BadgeKey
  imageUrl String? //em breve isso
  earnedAt DateTime @default(now())
  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, badgeKey])
  @@index([userId])
  @@map("user_badge")
}

enum WithdrawalStatus {
  PENDING
  APPROVED
  PROCESSING
  COMPLETED
  FAILED
}

model Withdrawal {
  id           String           @id @default(uuid())
  causeId      String
  cause        Cause            @relation(fields: [causeId], references: [id])
  userId       String
  user         User             @relation(fields: [userId], references: [id])
  amount       Float
  pixKey       String
  status       WithdrawalStatus @default(PENDING)
  mpTransferId String?
  failReason   String?
  createdAt    DateTime         @default(now())
  updatedAt    DateTime         @updatedAt

  @@index([causeId])
  @@index([userId])
  @@map("withdrawal")
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@index([userId])
  @@map("account")
}

model CollectionPoint {
  id           String         @id @default(uuid())
  name         String
  // Endereço
  street       String
  number       String
  complement   String?
  neighborhood String?
  city         String
  state        String
  zipCode      String?
  country      String         @default("Brasil")
  // Geolocalização
  latitude     Float
  longitude    Float
  // Metadados
  isActive     Boolean        @default(true)
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
  acceptedItems AcceptedItem[]

  @@map("collection_point")
}

model AcceptedItem {
  id                String          @id @default(uuid())
  name              String
  collectionPointId String
  collectionPoint   CollectionPoint @relation(fields: [collectionPointId], references: [id], onDelete: Cascade)

  @@map("accepted_item")
}

enum DocType {
  CNPJ_OR_CPF
  ADDRESS_PROOF
  POLICE_REPORT
  MEDICAL_REPORT
  OTHER
}

enum DocStatus {
  PENDING
  APPROVED
  REJECTED
}

model CauseDocument {
  id              String   @id @default(uuid())
  causeId         String
  cause           Cause    @relation(fields: [causeId], references: [id], onDelete: Cascade)
  
  fileKey         String
  fileName        String
  docType         DocType
  
  status          DocStatus @default(PENDING)
  rejectionReason String?
  
  createdAt       DateTime @default(now())

  @@index([causeId])
  @@map("cause_document")
}

enum SuggestionStatus {
  PENDING
  APPROVED
  REJECTED
}

model CollectionPointSuggestion {
  id              String           @id @default(uuid())

  // Quem sugeriu
  userId          String
  user            User             @relation(fields: [userId], references: [id])

  // Dados do ponto sugerido
  name            String
  street          String
  number          String
  complement      String?
  neighborhood    String?
  city            String
  state           String
  zipCode         String?
  country         String           @default("Brasil")

  // Geolocalização
  latitude        Float
  longitude       Float

  // Itens aceitos sugeridos (texto livre)
  suggestedItems  String[]

  // Justificativa do usuário
  reason          String?

  // Moderação
  status          SuggestionStatus @default(PENDING)
  adminNote       String?
  reviewedAt      DateTime?

  // Referência ao ponto de coleta criado (se aprovado)
  approvedPointId String?          @unique

  // Imagens (ex: fachada)
  images          SuggestionImage[]

  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt

  @@index([userId])
  @@index([status])
  @@map("collection_point_suggestion")
}

model SuggestionImage {
  id           String                    @id @default(uuid())
  suggestionId String
  suggestion   CollectionPointSuggestion @relation(fields: [suggestionId], references: [id], onDelete: Cascade)
  key          String
  position     Int
  createdAt    DateTime                  @default(now())

  @@index([suggestionId])
  @@unique([suggestionId, position])
  @@map("suggestion_image")
}
